#7 fixed with re-modification of the design.
Signed-off-by: hupeng <hup_dev@outlook.com>