@@ -12,12 +12,15 @@ import com.alibaba.excel.write.handler.WriteHandler;
 import com.alibaba.excel.write.metadata.WriteSheet;
 import com.hp.excel.annotation.ResponseExcel;
 import com.hp.excel.annotation.Sheet;
+import com.hp.excel.constant.ExcelConstants;
 import com.hp.excel.converter.LocalDateConverter;
 import com.hp.excel.converter.LocalDateTimeConverter;
-import com.hp.excel.enhence.ExcelWriterBuilderEnhance;
+import com.hp.excel.enhance.ExcelWriterBuilderEnhance;
 import com.hp.excel.head.HeadGenerator;
 import com.hp.excel.head.HeadMetaData;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.compress.utils.Lists;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.BeansException;
 import org.springframework.beans.factory.ObjectProvider;
@@ -32,12 +35,11 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.context.request.RequestAttributes;
 import org.springframework.web.context.request.RequestContextHolder;
 
-import jakarta.servlet.http.HttpServletResponse;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Modifier;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 /**
@@ -46,10 +48,10 @@ import java.util.*;
  */
 @RequiredArgsConstructor
 public abstract class AbstractExcelSheetWriteHandler implements ExcelSheetWriteHandler, ApplicationContextAware {
+
     private final ObjectProvider<List<Converter<?>>> converterProvider;
     private ApplicationContext applicationContext;
-
-    private final List<ExcelWriterBuilderEnhance> enhanceHolder = new ArrayList<>();
+    private final List<ExcelWriterBuilderEnhance> enhanceHolder = Lists.newArrayList();
 
     @Override
     public void check(ResponseExcel responseExcel) {
@@ -59,18 +61,18 @@ public abstract class AbstractExcelSheetWriteHandler implements ExcelSheetWriteH
     }
 
     @Override
-    public void export(Object o, HttpServletResponse response, ResponseExcel responseExcel) throws Exception {
+    public void export(Object o, HttpServletResponse response, ResponseExcel responseExcel) {
         this.check(responseExcel);
         final RequestAttributes requestAttributes = RequestContextHolder.getRequestAttributes();
-        String name = (String) (Objects.requireNonNull(requestAttributes)).getAttribute("__EXCEL_NAME_KEY__", 0);
+        String name = (String) (Objects.requireNonNull(requestAttributes)).getAttribute(ExcelConstants.FILENAME_ATTRIBUTE_KEY, 0);
         if (StrUtil.isEmpty(name)) {
             name = responseExcel.name();
             if (StrUtil.isEmpty(name)) {
                 name = UUID.randomUUID().toString();
             }
         }
-        String fileName = String.format("%s%s", URLEncoder.encode(name, "UTF-8"), responseExcel.suffix().getValue());
-        String contentType = MediaTypeFactory.getMediaType(fileName).map(MimeType::toString).orElse("application/vnd.ms-excel");
+        final String fileName = String.format("%s%s", URLEncoder.encode(name, StandardCharsets.UTF_8), responseExcel.suffix().getValue());
+        final String contentType = MediaTypeFactory.getMediaType(fileName).map(MimeType::toString).orElse("application/vnd.ms-excel");
         response.setContentType(contentType);
         response.setHeader("Content-Disposition", "attachment;filename=" + fileName);
         response.setHeader("Cache-Control", "no-cache");
@@ -85,13 +87,14 @@ public abstract class AbstractExcelSheetWriteHandler implements ExcelSheetWriteH
         this.applicationContext = applicationContext;
     }
 
-    public ExcelWriter getExcelWriter(HttpServletResponse response, ResponseExcel responseExcel, Class<?> dataClass) throws IOException {
+    protected ExcelWriter getExcelWriter(HttpServletResponse response, ResponseExcel responseExcel, Collection<? extends Class<?>> dataClasses) throws IOException {
         ExcelWriterBuilder excelWriterBuilder = EasyExcel.write(response.getOutputStream())
                 .registerConverter(LocalDateConverter.INSTANCE)
                 .registerConverter(LocalDateTimeConverter.INSTANCE)
                 .autoCloseStream(true)
                 .excelType(responseExcel.suffix())
                 .inMemory(responseExcel.inMemory());
+
         if (StrUtil.isNotEmpty(responseExcel.password())) {
             excelWriterBuilder.password(responseExcel.password());
         }
@@ -111,42 +114,43 @@ public abstract class AbstractExcelSheetWriteHandler implements ExcelSheetWriteH
 
         String templatePath = responseExcel.template();
         if (StringUtils.hasText(templatePath)) {
-            ClassPathResource classPathResource = new ClassPathResource(templatePath + File.separator + templatePath);
+            ClassPathResource classPathResource = new ClassPathResource(templatePath);
             InputStream inputStream = classPathResource.getInputStream();
             excelWriterBuilder.withTemplate(inputStream);
         }
+
         final Class<? extends ExcelWriterBuilderEnhance>[] enhancements = responseExcel.enhancement();
         if (ArrayUtil.isNotEmpty(enhancements)) {
             for (Class<? extends ExcelWriterBuilderEnhance> enhancement : enhancements) {
                 final ExcelWriterBuilderEnhance enhance = BeanUtils.instantiateClass(enhancement);
                 enhanceHolder.add(enhance);
-                excelWriterBuilder = enhance.enhanceExcel(excelWriterBuilder, response, responseExcel, dataClass, templatePath);
+                excelWriterBuilder = enhance.enhanceExcel(excelWriterBuilder, response, responseExcel, dataClasses, templatePath);
             }
         }
+
         return excelWriterBuilder.build();
     }
 
-    public void registerCommonConverter(ExcelWriterBuilder excelWriterBuilder, ResponseExcel responseExcel) {
-        final Class<? extends Converter>[] converters = responseExcel.converter();
-        if (converters.length != 0) {
-            Arrays.stream(converters).forEach(converter -> excelWriterBuilder.registerConverter(BeanUtils.instantiateClass(converter)));
+    protected void registerCommonConverter(ExcelWriterBuilder excelWriterBuilder, ResponseExcel responseExcel) {
+        if (ArrayUtil.isEmpty(responseExcel.converter())) {
+            return;
         }
+        Arrays.stream(responseExcel.converter())
+                .forEach(converter -> excelWriterBuilder.registerConverter(BeanUtils.instantiateClass(converter)));
     }
 
-    public void registerCustomConverter(ExcelWriterBuilder excelWriterBuilder) {
-        this.converterProvider.ifAvailable(converters -> {
-            Objects.requireNonNull(excelWriterBuilder);
-            converters.forEach(excelWriterBuilder::registerConverter);
-        });
+    protected void registerCustomConverter(ExcelWriterBuilder excelWriterBuilder) {
+        this.converterProvider.ifAvailable(converters -> converters.forEach(Objects.requireNonNull(excelWriterBuilder)::registerConverter));
     }
 
-    public WriteSheet sheet(Sheet sheet, Class<?> dataClass, String template, Class<? extends HeadGenerator> headGenerator) {
+    protected WriteSheet getWriteSheet(Sheet sheet, Class<?> dataClass, String template, Class<? extends HeadGenerator> headGenerator) {
         final Integer sheetNo = sheet.sheetNo() >= 0 ? sheet.sheetNo() : null;
         final String sheetName = sheet.sheetName();
         ExcelWriterSheetBuilder sheetBuilder = StrUtil.isEmpty(sheetName) ? EasyExcel.writerSheet(sheetNo) : EasyExcel.writerSheet(sheetNo, sheetName);
+
         Class<? extends HeadGenerator> headGenerateClass = null;
-        if (this.isNotInterface(sheet.headGenerateClass())) {
-            headGenerateClass = sheet.headGenerateClass();
+        if (this.isNotInterface(sheet.headGenerator())) {
+            headGenerateClass = sheet.headGenerator();
         } else if (this.isNotInterface(headGenerator)) {
             headGenerateClass = headGenerator;
         }
@@ -156,12 +160,13 @@ public abstract class AbstractExcelSheetWriteHandler implements ExcelSheetWriteH
         } else if (dataClass != null) {
             sheetBuilder.head(dataClass);
             if (sheet.excludes().length > 0) {
-                sheetBuilder.excludeColumnFiledNames(Arrays.asList(sheet.excludes()));
+                sheetBuilder.excludeColumnFieldNames(Arrays.asList(sheet.excludes()));
             }
             if (sheet.includes().length > 0) {
-                sheetBuilder.includeColumnFiledNames(Arrays.asList(sheet.includes()));
+                sheetBuilder.includeColumnFieldNames(Arrays.asList(sheet.includes()));
             }
         }
+
         if (CollUtil.isNotEmpty(enhanceHolder)) {
             for (ExcelWriterBuilderEnhance enhance : enhanceHolder) {
                 sheetBuilder = enhance.enhanceSheet(sheetBuilder, sheetNo, sheetName, dataClass, template, headGenerateClass);
@@ -180,6 +185,5 @@ public abstract class AbstractExcelSheetWriteHandler implements ExcelSheetWriteH
 
     protected boolean isNotInterface(Class<? extends HeadGenerator> headGeneratorClass) {
         return !Modifier.isInterface(headGeneratorClass.getModifiers());
-
     }
 }
