@@ -1,19 +1,24 @@
 package com.hp.excel.handler;
 
+import cn.hutool.core.collection.CollUtil;
 import com.alibaba.excel.ExcelWriter;
 import com.alibaba.excel.converters.Converter;
 import com.alibaba.excel.write.metadata.WriteSheet;
 import com.hp.excel.annotation.ResponseExcel;
 import com.hp.excel.annotation.Sheet;
+import com.hp.excel.exception.ExcelExportException;
+import jakarta.servlet.http.HttpServletResponse;
+import org.apache.commons.compress.utils.Lists;
 import org.springframework.beans.factory.ObjectProvider;
 
-import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.List;
 
 /**
+ * Export multiple sheets if the controller
+ * method returns {@code List<List<T>>}.
+ *
  * @author hp
- * @date 2022/11/7
  */
 public class MultiSheetWriteHandler extends AbstractExcelSheetWriteHandler {
 
@@ -23,34 +28,43 @@ public class MultiSheetWriteHandler extends AbstractExcelSheetWriteHandler {
 
     @Override
     public boolean support(Object obj) {
-        if (!(obj instanceof List)) {
+        if (!(obj instanceof List<?> list)) {
             throw new IllegalArgumentException("@ResponseExcel annotation works only when the return type is a List");
         }
-        final List<?> list = (List<?>) obj;
-        return !list.isEmpty() && (list.get(0) instanceof List);
+        return CollUtil.isNotEmpty(list) && (list.get(0) instanceof List);
     }
 
+    @SuppressWarnings("unchecked")
     @Override
     public void write(Object o, HttpServletResponse response, ResponseExcel responseExcel) {
-        try {
-            List<?> list = (List) o;
-            final List<?> itemList = (List) list.get(0);
-            ExcelWriter excelWriter = this.getExcelWriter(response, responseExcel, itemList.get(0).getClass());
-            Sheet[] sheets = responseExcel.sheets();
+        final List<List<?>> list = (List<List<?>>) o;
+        final Sheet[] sheets = responseExcel.sheets();
+        final List<Class<?>> dataClasses = Lists.newArrayList();
+        for (int i = 0; i < sheets.length; ++i) {
+            dataClasses.add(list.get(i).getFirst().getClass());
+        }
+
+        try (final ExcelWriter excelWriter = getExcelWriter(response, responseExcel, dataClasses)) {
 
             for (int i = 0; i < sheets.length; ++i) {
-                List<?> eleList = (List) list.get(i);
-                Class<?> dataClass = eleList.get(0).getClass();
-                WriteSheet sheet = this.sheet(sheets[i], dataClass, responseExcel.template(), responseExcel.headGenerator());
+                final List<?> data = list.get(i);
+                final Sheet sheetAnn = sheets[i];
+                final WriteSheet sheet = this.getWriteSheet(
+                        sheetAnn,
+                        data.getFirst().getClass(),
+                        sheetAnn.template(),
+                        sheetAnn.headGenerator()
+                );
+
                 if (responseExcel.fill()) {
-                    excelWriter.fill(eleList, sheet);
+                    excelWriter.fill(data, sheet);
                 } else {
-                    excelWriter.write(eleList, sheet);
+                    excelWriter.write(data, sheet);
                 }
             }
             excelWriter.finish();
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new ExcelExportException(e);
         }
     }
 }
